--- a/config/rubber/rubber.yml
+++ b/config/rubber/rubber.yml
@@ -54,7 +54,7 @@ cloud_providers:
     # us-west-1      # US West (Northern California) Region
     # us-west-2      # US West (Oregon) Region
     #
-    region: us-east-1
+    region: us-west-2
 
     # REQUIRED The amazon keys and account ID (digits only, no dashes) used to access the AWS API
     #
@@ -86,8 +86,8 @@ cloud_providers:
     # Ubuntu 14.04.1 Trusty instance-store 64-bit: ami-90c574f8
     #
     # m1.small or m1.large or m1.xlarge
-    image_type: c1.medium
-    image_id: ami-90c574f8
+    image_type: t2.small
+    image_id: ami-3d50120d
 
     # OPTIONAL: Provide fog-specific options directly.  This should only be used if you need a special setting that
     # Rubber does not directly expose.  Since these settings will be passed directly through to fog, we can't make any
