--- a/config/rubber/rubber.yml
+++ b/config/rubber/rubber.yml
@@ -1,5 +1,5 @@
 # REQUIRED: The name of your application
-app_name: your_app_name
+app_name: bloggy
 
 # REQUIRED: The system user to run your app servers as
 app_user: app
@@ -14,11 +14,11 @@ admin_email: "root@#{full_host}"
 # web_tools_password: sekret
 
 # REQUIRED: The timezone the server should be in
-timezone: US/Eastern
+timezone: US/Pacific
 
 # REQUIRED: the domain all the instances should be associated with
 #
-domain: foo.com
+domain: bloggy.com
 
 # OPTIONAL: See rubber-dns.yml for dns configuration
 # This lets rubber update a dynamic dns service with the instance alias
@@ -28,16 +28,16 @@ domain: foo.com
 # OPTIONAL: Additional rubber file to pull config from if it exists.  This file will
 # also be pushed to remote host at Rubber.root/config/rubber/rubber-secret.yml
 #
-# rubber_secret: "#{File.expand_path('~') + '/.ec2' + (Rubber.env == 'production' ? '' : '_dev') + '/rubber-secret.yml' rescue 'rubber-secret.yml'}"
+rubber_secret: "#{File.expand_path('~') + '/.ec2' + (Rubber.env == 'production' ? '' : '_dev') + '/rubber-secret.yml' rescue 'rubber-secret.yml'}"
 
-# OPTIONAL: Encryption key that was used to obfuscate the contents of rubber-secret.yml with "rubber util:obfuscation" 
+# OPTIONAL: Encryption key that was used to obfuscate the contents of rubber-secret.yml with "rubber util:obfuscation"
 # Not that much better when stored in here, but you could use a ruby snippet in here to fetch it from a key server or something
 #
 # rubber_secret_key: "XXXyyy=="
 
 # REQUIRED All known cloud providers with the settings needed to configure them
 # There's only one working cloud provider right now - Amazon Web Services
-# To implement another, clone lib/rubber/cloud/aws.rb or make the fog provider 
+# To implement another, clone lib/rubber/cloud/aws.rb or make the fog provider
 # work in a generic fashion
 #
 cloud_providers:
@@ -54,7 +54,7 @@ cloud_providers:
     # us-west-1      # US West (Northern California) Region
     # us-west-2      # US West (Oregon) Region
     #
-    region: us-east-1
+    region: us-west-2
 
     # REQUIRED The amazon keys and account ID (digits only, no dashes) used to access the AWS API
     #
@@ -86,8 +86,8 @@ cloud_providers:
     # Ubuntu 14.04.1 Trusty instance-store 64-bit: ami-90c574f8
     #
     # m1.small or m1.large or m1.xlarge
-    image_type: c1.medium
-    image_id: ami-90c574f8
+    image_type: t2.small
+    image_id: ami-3d50120d
 
     # OPTIONAL: Provide fog-specific options directly.  This should only be used if you need a special setting that
     # Rubber does not directly expose.  Since these settings will be passed directly through to fog, we can't make any
